--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,8 @@ services:
   php:
     build:
       context: .
+      args:
+        VERSION: ${PHP_VERSION}
       dockerfile: ./docker/php.Dockerfile
     ports:
       - 9000:9000
